--- a/gulp-other/package.json
+++ b/gulp-other/package.json
@@ -16,7 +16,10 @@
     "imagemin": "^5.2.2",
     "imagemin-pngquant": "^5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-jade": "^1.1.0",
+    "gulp-wrap-amd": "^0.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
