--- a/gulp-other/package.json
+++ b/gulp-other/package.json
@@ -17,7 +17,11 @@
     "imagemin-pngquant": "^5.0.0"
   },
   "devDependencies": {
+    "gulp-color": "0.0.1",
+    "gulp-if": "^2.0.1",
     "gulp-jade": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.7",
     "gulp-wrap-amd": "^0.5.0"
   },
   "scripts": {
