--- a/gulp-other/package.json
+++ b/gulp-other/package.json
@@ -3,26 +3,30 @@
   "version": "1.0.0",
   "description": "mincss,minjs,minimg",
   "main": "gulpfile.js",
-  "dependencies": {
-    "browser-sync": "^2.13.0",
-    "cache": "^1.1.2",
-    "gulp-cache": "^0.4.5",
-    "gulp-concat": "^2.6.0",
-    "gulp-imagemin": "^3.0.2",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^1.5.4",
-    "gulp-watch": "^4.3.8",
-    "imagemin": "^5.2.2",
-    "imagemin-pngquant": "^5.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "gulp-color": "0.0.1",
+    "browser-sync": "^2.13.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-browser-sync": "^0.0.4",
+    "gulp-color": "^0.0.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-dest-clean": "^0.5.0",
+    "gulp-filter": "^4.0.0",
     "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.2",
     "gulp-jade": "^1.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-newer": "^1.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.0",
+    "gulp-rev-collector": "^1.0.5",
+    "gulp-run-sequence": "^0.3.2",
+    "gulp-sass": "^2.3.2",
     "gulp-util": "^3.0.7",
-    "gulp-wrap-amd": "^0.5.0"
+    "gulp-watch": "^4.3.8",
+    "gulp-wrap-amd": "^0.5.0",
+    "install": "^0.8.1",
+    "lie": "^3.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
