--- a/gulp-item/item3/package.json
+++ b/gulp-item/item3/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.13.0",
+    "browser-sync-ui": "^0.6.0",
     "chalk": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -13,21 +14,15 @@
     "gulp-color": "^0.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-dest-clean": "^0.5.0",
-    "gulp-filter": "^4.0.0",
-    "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.2",
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-newer": "^1.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^7.1.0",
-    "gulp-rev-collector": "^1.0.5",
-    "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.8",
-    "gulp-wrap-amd": "^0.5.0",
     "install": "^0.8.1",
     "lie": "^3.0.4"
   },
